@@ -141,6 +141,9 @@
     <contributor>
       <name>Kandarp Shah</name>
     </contributor>
+    <contributor>
+      <name>Maxim Zhao</name>
+    </contributor>
   </contributors>
 
   <dependencies>
